Revision history for Getopt-Complete

0.25    2011-03-28
        Fixed but with single character options.
        
0.24    2011-03-02
        The "version" module makes this difficult to install.  Switching to simple text version "0.24".

0.23    2011-01-19
        Updated build logic to prevent installation with out a recent version.pm

0.22    2011-01-16
        Another atch from  Andrei Benea (abenea@github) fixing bug with nonsense argument not generating an error.
        
0.21    2011-01-12
        Patch from  Andrei Benea (abenea@github) fixing bug with all bare arguments.
        Fix to the demoapp test.
        Switch to Build.PL instead of Makefile.PL so we can install on Mac w/o xcode.

0.20    2010-11-24
        Updates to cache logic.
        Replacement for 0.19 which failed to compile.

0.17    2010-11-04
        Fixed bug in parse_completion_request that was preventing detection of boolean options
        Support for completing bareargs as files.
        Support for completing unknown options as files.

0.16    2010-11-02
        Fixed bug in completing paths beginning with ~
        Better support for params that are expanded by Bash

0.15    2010-10-24
        Fixed a failing test with a bad perl interpreter path for the demoapp.
        Fixed a bug with running tests on a machine with a space in the path to the files.
        
0.14    2010-09-09
        Fixed bug that returned completion results even when various errors were encountered.
        Added t/demoapp*, a test to validate some basic tab completion results.

0.13    2010-07-23
        Added LazyOptions and Cache for improved handling of nested commands.
        Refactored for testability.
        Added stricter failing when cant read opts file.

0.11    2009-11-01
        Removed the pod test which breaks automatic installs via the CPAN shell.

0.10    2009-08-02
        Fixed a bug which made file/directory paths at which there is no file "invalid".