@@ -1,8 +1,9 @@
 Revision history for Getopt-Complete
 
 0.25    2011-03-28
+        Fixed bug with '<>=s@' not taking multiple values.
         Fixed but with single character options.
-        
+
 0.24    2011-03-02
         The "version" module makes this difficult to install.  Switching to simple text version "0.24".
 
